# italia-corpus

./: .gitignore  LICENSE  Makefile  README.md  project.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
Atti di attuazione Regolamenti UE/: Adempimenti finanziari per lattuazione del regolamento CEE n. 880-92 sul marchio di qualita ecologica - Ecolabel.md  Attuazione degli articoli 8 e 9 del regolamento CEE n. 2092-91 in materia di produzione agricola ed agroalimentare con metodo biologico.md  Attuazione del regolamento CE n. 3381-94 e della decisione n. 94-942-PESC sullesportazione di beni a duplice uso.md  Disposizioni per lattuazione del regolamento CEE n.1527-88 della commissione relativo alla concessione di unaiuto allammasso privato del formaggio Pecorino Romano.md  Distribuzione delle quantita aggiuntive di pomodoro non contrattateai sensi del regolamento CEE n. 2223-85 nella campagna ditrasformazione 1987-88.md  Norme in materia di denominazioni e definizioni dellolio di oliva inattuazione del regolamento CEE n. 1915-87 del 2 luglio 1987.md  Norme per il regime doganale del transito comunitario delle merci stabilito dal regolamento CEE n. 222-77.md  Regolamento riguardante lapplicazione del prelievo supplementare per il latte di vacca previsto dal regolamento CEE n. 804-68.md
Atti di recepimento direttive UE/: 2011-03-28_011G0067_VIGENZA_2026-05-01_V0.md  2014-07-18_14G00113_VIGENZA_2026-04-30_V0.md  2015-09-01_15G00151_VIGENZA_2026-04-29_V0.md
Atti normativi abrogati (in originale)/: 012U0343.md  014U1324.md  (+93109 more)
Codici/: Nuovo codice della strada.md  (+9 more)
(+10265 files in other folders)
