[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "italia-corpus-lab"
version = "0.1.0"
description = "DataCivicLab tooling per Italia Corpus"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pandas>=2",
    "pyarrow>=15",
    "mcp>=1.0.0",
]
mcp = [
    "mcp>=1.0.0",
]

[project.scripts]
italia-corpus-mcp = "lab_tools.mcp_server:main"
italia-corpus-extract = "lab_tools.extract:main"

[tool.pytest.ini_options]
markers = [
    "contract: Contratto pubblico (CLI/API/output)",
    "pure_unit: Logica pura isolata",
    "policy: Regola non ovvia",
    "smoke: Flusso end-to-end",
]

[tool.setuptools.packages.find]
include = ["lab_tools*"]
